--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,6 +23,7 @@ jobs:
             linux-x64,
             linux-arm,
             linux-arm64,
+            generic
           ]
 
     runs-on: windows-latest
