--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,7 @@ jobs:
             linux-x64,
             linux-arm,
             linux-arm64,
-            generic
+            generic,
           ]
 
     runs-on: windows-latest
@@ -72,7 +72,7 @@ jobs:
         with:
           name: ${{ matrix.arch }}
           path: ./dist/${{ matrix.arch }}.zip
-    
+
       - name: Upload ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
         continue-on-error: true
         uses: actions/upload-artifact@v3.0.0
@@ -155,90 +155,11 @@ jobs:
           body: release created bt github actions
           prerelease: true
 
-      - name: Upload win-x64 to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create ${{ env.PROJECT_NAME }} GitHub release
+        id: github_release
+        uses: "marvinpinto/action-automatic-releases@latest"
         with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/win-x64.zip
-          asset_name: ${{ env.PROJECT_NAME }}-win-x64.zip
-          asset_content_type: application/zip
-
-      - name: Upload win-arm64 to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/win-arm64.zip
-          asset_name: ${{ env.PROJECT_NAME }}-win-arm64.zip
-          asset_content_type: application/zip
-
-      - name: Upload osx-x64 to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/osx-x64.zip
-          asset_name: ${{ env.PROJECT_NAME }}-osx-x64.zip
-          asset_content_type: application/zip
-
-      - name: Upload osx-arm64 to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/osx-arm64.zip
-          asset_name: ${{ env.PROJECT_NAME }}-osx-arm64.zip
-          asset_content_type: application/zip
-
-      - name: Upload linux-x64 to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/linux-x64.zip
-          asset_name: ${{ env.PROJECT_NAME }}-linux-x64.zip
-          asset_content_type: application/zip
-
-      - name: Upload linux-arm to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/linux-arm.zip
-          asset_name: ${{ env.PROJECT_NAME }}-linux-arm.zip
-          asset_content_type: application/zip
-
-      - name: Upload linux-arm64 to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/linux-arm64.zip
-          asset_name: ${{ env.PROJECT_NAME }}-linux-arm64.zip
-          asset_content_type: application/zip
-
-      - name: Upload generic to GitHub release
-        continue-on-error: true
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/generic.zip
-          asset_name: ${{ env.PROJECT_NAME }}-generic.zip
-          asset_content_type: application/zip
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ github.ref }}"
+          prerelease: true
+          files: out/*.zip
