--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,7 +23,6 @@ jobs:
             linux-x64,
             linux-arm,
             linux-arm64,
-            generic,
           ]
 
     runs-on: windows-latest
@@ -55,16 +54,21 @@ jobs:
 
           $commonArgs = '-p:PublishTrimmed=false'
 
-          if ($variant -eq 'generic') {
-            $buildArgs = '-p:TargetLatestRuntimePatch=false', '-p:UseAppHost=false'
-          } else {
-            $buildArgs = '-r', "$variant", '--self-contained', '-p:PublishSingleFile=true', '-p:IncludeNativeLibrariesForSelfExtract=true'
-          }
+          $buildArgs = '-r', "$variant", '-p:PublishSingleFile=true', '-p:IncludeNativeLibrariesForSelfExtract=true'
 
-          dotnet publish ${{ env.PROJECT_NAME }} -c "$env:CONFIGURATION" -o "./tmp/${{ env.PROJECT_NAME }}" -p:XJBVariant="$variant" -p:ContinuousIntegrationBuild=true --no-restore --nologo $commonArgs $buildArgs
+          dotnet publish ${{ env.PROJECT_NAME }} -c "$env:CONFIGURATION" -o "./tmp/${{ env.PROJECT_NAME }}-fde" --self-contained=true -p:XJBVariant="$variant" -p:ContinuousIntegrationBuild=true --no-restore --nologo $commonArgs $buildArgs
+          dotnet publish ${{ env.PROJECT_NAME }} -c "$env:CONFIGURATION" -o "./tmp/${{ env.PROJECT_NAME }}" --self-contained=false -p:XJBVariant="$variant" -p:ContinuousIntegrationBuild=true --no-restore --nologo $commonArgs $buildArgs
 
       - name: Zip files
-        run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}/*"
+        run: |
+          7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}-fde.zip" "./tmp/${{ env.PROJECT_NAME }}-fde/*"
+          7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}/*"
+      - name: Upload ${{ env.PROJECT_NAME }}-fde ${{ matrix.arch }}
+        continue-on-error: true
+        uses: actions/upload-artifact@v3.0.0
+        with:
+          name: ${{ matrix.arch }}-fde
+          path: ./dist/${{ matrix.arch }}-fde.zip
 
       - name: Upload ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
         continue-on-error: true
@@ -72,13 +76,6 @@ jobs:
         with:
           name: ${{ matrix.arch }}
           path: ./dist/${{ matrix.arch }}.zip
-
-      - name: Upload ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
-        continue-on-error: true
-        uses: actions/upload-artifact@v3.0.0
-        with:
-          name: ${{ matrix.arch }}
-          path: ./dist/${{ matrix.arch }}-cfe.zip
 
   release:
     needs: build
@@ -88,11 +85,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3.0.2
 
+      - name: Download win-x64-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: win-x64-fde
+          path: out
+
       - name: Download win-x64 artifact
         continue-on-error: true
         uses: actions/download-artifact@v3.0.0
         with:
           name: win-x64
+          path: out
+
+      - name: Download win-arm64-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: win-arm64-fde
           path: out
 
       - name: Download win-arm64 artifact
@@ -102,11 +113,25 @@ jobs:
           name: win-arm64
           path: out
 
+      - name: Download osx-x64-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: osx-x64-fde
+          path: out
+
       - name: Download osx-x64 artifact
         continue-on-error: true
         uses: actions/download-artifact@v3.0.0
         with:
           name: osx-x64
+          path: out
+
+      - name: Download osx-arm64-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: osx-arm64-fde
           path: out
 
       - name: Download osx-arm64 artifact
@@ -116,11 +141,25 @@ jobs:
           name: osx-arm64
           path: out
 
+      - name: Download linux-x64-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: linux-x64-fde
+          path: out
+
       - name: Download linux-x64 artifact
         continue-on-error: true
         uses: actions/download-artifact@v3.0.0
         with:
           name: linux-x64
+          path: out
+
+      - name: Download linux-arm-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: linux-arm-fde
           path: out
 
       - name: Download linux-arm artifact
@@ -130,18 +169,18 @@ jobs:
           name: linux-arm
           path: out
 
+      - name: Download linux-arm64-fde artifact
+        continue-on-error: true
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: linux-arm64-fde
+          path: out
+
       - name: Download linux-arm64 artifact
         continue-on-error: true
         uses: actions/download-artifact@v3.0.0
         with:
           name: linux-arm64
-          path: out
-
-      - name: Download generic artifact
-        continue-on-error: true
-        uses: actions/download-artifact@v3.0.0
-        with:
-          name: generic
           path: out
 
       - name: Create ${{ env.PROJECT_NAME }} GitHub release
@@ -150,16 +189,147 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.ref }}
-          release_name: ${{ env.PROJECT_NAME }} ${{ github.ref }}
-          body: release created bt github actions
+          tag_name: ${{ github.ref_name }}
+          release_name: ${{ env.PROJECT_NAME }} ${{ github.ref_name }}
           prerelease: true
+          body_path: .github/RELEASE_TEMPLATE.md
 
-      - name: Create ${{ env.PROJECT_NAME }} GitHub release
-        id: github_release
-        uses: "marvinpinto/action-automatic-releases@latest"
+      - name: Upload ${{ env.PROJECT_NAME }}-win-x64-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: "${{ github.ref }}"
-          prerelease: true
-          files: out/*.zip
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/win-x64-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-win-x64-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-win-x64
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/win-x64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-win-x64.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-win-arm64-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/win-arm64-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-win-arm64-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-win-arm64
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/win-arm64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-win-arm64.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-osx-x64-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/osx-x64-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-osx-x64-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-osx-x64
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/osx-x64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-osx-x64.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-osx-arm64-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/osx-arm64-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-osx-arm64-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-osx-arm64
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/osx-arm64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-osx-arm64.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-linux-x64-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-x64-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-x64-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-linux-x64
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-x64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-x64.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-linux-arm-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-arm-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-arm-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-linux-arm
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-arm.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-arm.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-linux-arm64-fde
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-arm64-fde.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-arm64-fde.zip
+          asset_content_type: application/zip
+
+      - name: Upload ${{ env.PROJECT_NAME }}-linux-arm64
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-arm64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-arm64.zip
+          asset_content_type: application/zip
