--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -54,6 +54,8 @@
     "DailyReviewLimit": 5,
     "DailyPostLimit": 5,
     "RatioDivisor": 100,
-    "MaxRatio": 10
+    "MaxRatio": 10,
+    "PureRetuens": true,
+    "PureHashTag": true
   }
 }
