配置文件修改

--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -56,6 +56,8 @@
     "RatioDivisor": 100,
     "MaxRatio": 10,
     "PureRetuens": true,
-    "PureHashTag": true
+    "PureHashTag": true,
+    "PureWords": true,
+    "PostExpiredTime": 3
   }
 }
