定时任务使用Quartz

--- a/XinjingdailyBot.Tasks/XinjingdailyBot.Tasks.csproj
+++ b/XinjingdailyBot.Tasks/XinjingdailyBot.Tasks.csproj
@@ -12,4 +12,13 @@
     <ProjectReference Include="..\XinjingdailyBot.Service\XinjingdailyBot.Service.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Quartz" />
+    <PackageReference Include="Quartz.AspNetCore" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Using Include="Quartz" />
+  </ItemGroup>
+
 </Project>
