--- a/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
+++ b/XinjingdailyBot.WebAPI/XinjingdailyBot.WebAPI.csproj
@@ -15,6 +15,8 @@
     <PackageReference Include="MySql.Data" />
     <PackageReference Include="NLog" />
     <PackageReference Include="NLog.Extensions.Logging" />
+    <PackageReference Include="Quartz" />
+    <PackageReference Include="Quartz.AspNetCore" />
     <PackageReference Include="SqlSugar.IOC" />
     <PackageReference Include="SqlSugarCore" />
     <PackageReference Include="Swashbuckle.AspNetCore" />
