--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -2,7 +2,7 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	autoReload="true"
-	internalLogLevel="Info"
+	internalLogLevel="Warn"
 	internalLogFile="${basedir}/logs/nlog-internal.txt">
 
 	<!-- Load the ASP.NET Core plugin,enable asp.net core layout renderers-->
@@ -11,6 +11,8 @@
 	</extensions>
 
 	<targets>
+    <default-wrapper xsi:type="AsyncWrapper"></default-wrapper>
+    
 		<!-- 控制台日志 -->
 		<!-- 网络请求日志 -->
 		<target name="consoleNet" xsi:type="ColoredConsole"
@@ -75,14 +77,14 @@
 
 	<rules>
 		<!-- 除非调试需要，把 .NET Core 程序集的 Debug 输出都屏蔽 Trace -> Debug-> Info ->Warn-> Error-> Critical-->
-		<!-- 屏蔽系统日志 -->
-		<logger name="Microsoft.*" writeTo="blackhole" final="true" />
-		<logger name="System.*" writeTo="blackhole" final="true" />
-		<logger name="Microsoft.*,Quartz.Core.QuartzSchedulerThread" writeTo="blackhole" maxlevel="Info" final="true" />
+		<!-- 屏蔽日志 -->
+    <logger name="Microsoft.*" writeTo="blackhole" maxlevel="Warn" final="true" />
+    <logger name="Quartz.*" writeTo="blackhole" maxlevel="Warn" final="true" />
+    <logger name="System.*" writeTo="blackhole" maxlevel="Warn" final="true" />
 
 		<!-- SQL日志 -->
     <logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="console" final="true" />
-    <!-- <logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="consoleSql" final="true" /> -->
+    <logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="consoleSql" final="true" />
 		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="filelogSql" final="true" />
 
 		<!-- 控制台日志 -->
