--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -57,7 +57,7 @@
     "MaxRatio": 10,
     "PureRetuens": true,
     "PureHashTag": true,
-    "PureWords": true,
+    "PureWords": "",
     "PostExpiredTime": 3
   }
 }
