--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -59,5 +59,9 @@
     "PureHashTag": true,
     "PureWords": "",
     "PostExpiredTime": 3
+  },
+  // IpInfo设置
+  "IpInfo": {
+    "Token": ""
   }
 }
