--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -78,6 +78,6 @@
     <!-- 文件日志 -->
     <logger name="*" minLevel="Error" writeTo="fileErrorlog"/>
     <logger name="*" minLevel="Info" writeTo="filelog" />
-    <logger name="*" minLevel="Trace" writeTo="allfile" />
+    <logger name="*" minLevel="Info" writeTo="allfile" />
   </rules>
 </nlog>
