--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -16,9 +16,16 @@
     <!-- 控制台日志 -->
     <!-- 普通日志 -->
     <target name="console" xsi:type="ColoredConsole"
-			errorStream="True"
-			enableAnsiOutput="True"
-			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message}" />
+      errorStream="True"
+      enableAnsiOutput="True"
+      layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message}" >
+      <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
+      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+      <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
+      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
+    </target>
     <!-- 错误日志 -->
     <target name="consoleError" xsi:type="ColoredConsole"
 			errorStream="True"
