--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	autoReload="true"
-	internalLogLevel="Warn"
-	internalLogFile="${basedir}/logs/nlog-internal.txt">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  autoReload="true"
+  internalLogLevel="Warn"
+  internalLogFile="${basedir}/logs/nlog-internal.txt">
 
   <!-- Load the ASP.NET Core plugin,enable asp.net core layout renderers-->
   <extensions>
@@ -18,51 +18,52 @@
     <target name="console" xsi:type="ColoredConsole"
       errorStream="True"
       enableAnsiOutput="True"
-      layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message}" >
+      layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message}">
       <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
       <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
       <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
       <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
       <highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
-      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red" backgroundColor="White" />
+      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red"
+        backgroundColor="White" />
     </target>
     <!-- 错误日志 -->
     <target name="consoleError" xsi:type="ColoredConsole"
-			errorStream="True"
-			enableAnsiOutput="True"
-			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}" />
+      errorStream="True"
+      enableAnsiOutput="True"
+      layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}" />
 
     <!-- 文件日志 -->
     <!-- 普通日志 -->
     <target name="filelog" xsi:type="File"
-			fileName="${basedir}/logs/log.txt"
-			archiveFileName="${basedir}/logs/log.${date:format=yyyy-MM-dd}.txt"
-			archiveEvery="Day"
-			archiveAboveSize="20000000"
-			maxArchiveFiles="30"
-			archiveOldFileOnStartup="true"
-			keepFileOpen="true"
-			layout="${longdate} | ${level} | ${logger} | ${message}" />
+      fileName="${basedir}/logs/log.txt"
+      archiveFileName="${basedir}/logs/log.${date:format=yyyy-MM-dd}.txt"
+      archiveEvery="Day"
+      archiveAboveSize="20000000"
+      maxArchiveFiles="30"
+      archiveOldFileOnStartup="true"
+      keepFileOpen="true"
+      layout="${longdate} | ${level} | ${logger} | ${message}" />
     <!-- 错误日志 -->
     <target name="fileErrorlog" xsi:type="File"
-			fileName="${basedir}/logs/error.txt"
-			archiveFileName="${basedir}/logs/error.${date:format=yyyy-MM-dd}.txt"
-			archiveEvery="Day"
-			archiveAboveSize="20000000"
-			maxArchiveFiles="30"
-			archiveOldFileOnStartup="true"
-			keepFileOpen="true"
-			layout="${longdate} | ${level} | ${logger} | ${message} | ${exception:format=toString,Data}" />
+      fileName="${basedir}/logs/error.txt"
+      archiveFileName="${basedir}/logs/error.${date:format=yyyy-MM-dd}.txt"
+      archiveEvery="Day"
+      archiveAboveSize="20000000"
+      maxArchiveFiles="30"
+      archiveOldFileOnStartup="true"
+      keepFileOpen="true"
+      layout="${longdate} | ${level} | ${logger} | ${message} | ${exception:format=toString,Data}" />
     <!-- 全部日志 -->
     <target name="filelogAll" xsi:type="File"
-			fileName="${basedir}/logs/all.txt"
-			archiveFileName="${basedir}/logs/all.${date:format=yyyy-MM-dd}.txt"
-			archiveEvery="Day"
-			archiveAboveSize="20000000"
-			maxArchiveFiles="30"
-			archiveOldFileOnStartup="true"
-			keepFileOpen="true"
-			layout="${longdate} | ${level} | ${logger} | ${message}" />
+      fileName="${basedir}/logs/all.txt"
+      archiveFileName="${basedir}/logs/all.${date:format=yyyy-MM-dd}.txt"
+      archiveEvery="Day"
+      archiveAboveSize="20000000"
+      maxArchiveFiles="30"
+      archiveOldFileOnStartup="true"
+      keepFileOpen="true"
+      layout="${longdate} | ${level} | ${logger} | ${message}" />
 
     <!--黑洞-->
     <target name="blackhole" xsi:type="Null" />
@@ -76,14 +77,15 @@
     <logger name="System.*" writeTo="blackhole" maxlevel="Warn" final="true" />
 
     <!-- SQL日志 -->
-    <logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="console" final="true" />
+    <logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="console"
+      final="true" />
 
     <!-- 控制台日志 -->
     <logger name="*" minLevel="Error" writeTo="consoleError" />
     <logger name="*" minLevel="Debug" writeTo="console" />
 
     <!-- 文件日志 -->
-    <logger name="*" minLevel="Error" writeTo="fileErrorlog"/>
+    <logger name="*" minLevel="Error" writeTo="fileErrorlog" />
     <logger name="*" minLevel="Info" writeTo="filelog" />
     <logger name="*" minLevel="Info" writeTo="allfile" />
   </rules>
