--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -5,88 +5,84 @@
   internalLogLevel="Warn"
   internalLogFile="${basedir}/logs/nlog-internal.txt">
 
-  <!-- Load the ASP.NET Core plugin,enable asp.net core layout renderers-->
-  <extensions>
-    <add assembly="NLog.Web.AspNetCore" />
-  </extensions>
+	<!-- Load the ASP.NET Core plugin,enable asp.net core layout renderers-->
+	<extensions>
+		<add assembly="NLog.Web.AspNetCore" />
+	</extensions>
 
-  <targets>
-    <default-wrapper xsi:type="AsyncWrapper"></default-wrapper>
+	<targets>
+		<default-wrapper xsi:type="AsyncWrapper"></default-wrapper>
 
-    <!-- 控制台日志 -->
-    <!-- 普通日志 -->
-    <target name="console" xsi:type="ColoredConsole"
-      errorStream="True"
-      enableAnsiOutput="True"
-      layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message}">
-      <highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
-      <highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
-      <highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
-      <highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
-      <highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
-      <highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red"
-        backgroundColor="White" />
-    </target>
-    <!-- 错误日志 -->
-    <target name="consoleError" xsi:type="ColoredConsole"
-      errorStream="True"
-      enableAnsiOutput="True"
-      layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}" />
+		<!-- 控制台日志 -->
+		<!-- 普通日志 -->
+		<target name="console" xsi:type="ColoredConsole"
+		  errorStream="True"
+		  enableAnsiOutput="True"
+		  layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}">
+			<highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
+			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
+			<highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
+			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
+			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
+			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red"
+			  backgroundColor="White" />
+		</target>
 
-    <!-- 文件日志 -->
-    <!-- 普通日志 -->
-    <target name="filelog" xsi:type="File"
-      fileName="${basedir}/logs/log.txt"
-      archiveFileName="${basedir}/logs/log.${date:format=yyyy-MM-dd}.txt"
-      archiveEvery="Day"
-      archiveAboveSize="20000000"
-      maxArchiveFiles="30"
-      archiveOldFileOnStartup="true"
-      keepFileOpen="true"
-      layout="${longdate} | ${level} | ${logger} | ${message}" />
-    <!-- 错误日志 -->
-    <target name="fileErrorlog" xsi:type="File"
-      fileName="${basedir}/logs/error.txt"
-      archiveFileName="${basedir}/logs/error.${date:format=yyyy-MM-dd}.txt"
-      archiveEvery="Day"
-      archiveAboveSize="20000000"
-      maxArchiveFiles="30"
-      archiveOldFileOnStartup="true"
-      keepFileOpen="true"
-      layout="${longdate} | ${level} | ${logger} | ${message} | ${exception:format=toString,Data}" />
-    <!-- 全部日志 -->
-    <target name="filelogAll" xsi:type="File"
-      fileName="${basedir}/logs/all.txt"
-      archiveFileName="${basedir}/logs/all.${date:format=yyyy-MM-dd}.txt"
-      archiveEvery="Day"
-      archiveAboveSize="20000000"
-      maxArchiveFiles="30"
-      archiveOldFileOnStartup="true"
-      keepFileOpen="true"
-      layout="${longdate} | ${level} | ${logger} | ${message}" />
+		<!-- 文件日志 -->
+		<!-- 普通日志 -->
+		<target name="fileLog" xsi:type="File"
+			fileName="${basedir}/logs/log.txt"
+			archiveFileName="${basedir}/logs/log.${date:format=yyyy-MM-dd}.txt"
+			archiveEvery="Day"
+			archiveAboveSize="20000000"
+			maxArchiveFiles="30"
+			archiveOldFileOnStartup="true"
+			keepFileOpen="true"
+			layout="${longdate} | ${level} | ${logger} | ${message} ${exception:format=toString,Data}" />
 
-    <!--黑洞-->
-    <target name="blackhole" xsi:type="Null" />
-  </targets>
+		<!-- 错误日志 -->
+		<target name="fileErrorLog" xsi:type="File"
+			fileName="${basedir}/logs/error.txt"
+			archiveFileName="${basedir}/logs/error.${date:format=yyyy-MM-dd}.txt"
+			archiveEvery="Day"
+			archiveAboveSize="20000000"
+			maxArchiveFiles="30"
+			archiveOldFileOnStartup="true"
+			keepFileOpen="true"
+			layout="${longdate} | ${level} | ${logger} | ${message} ${exception:format=toString,Data}" />
 
-  <rules>
-    <!-- 除非调试需要，把 .NET Core 程序集的 Debug 输出都屏蔽 Trace -> Debug-> Info ->Warn-> Error-> Critical-->
-    <!-- 屏蔽日志 -->
-    <logger name="Microsoft.*" writeTo="blackhole" maxlevel="Warn" final="true" />
-    <logger name="Quartz.*" writeTo="blackhole" maxlevel="Warn" final="true" />
-    <logger name="System.*" writeTo="blackhole" maxlevel="Warn" final="true" />
+		<!-- 全部日志 -->
+		<target name="fileAllLog" xsi:type="File"
+			fileName="${basedir}/logs/all.txt"
+			archiveFileName="${basedir}/logs/all.${date:format=yyyy-MM-dd}.txt"
+			archiveEvery="Day"
+			archiveAboveSize="20000000"
+			maxArchiveFiles="30"
+			archiveOldFileOnStartup="true"
+			keepFileOpen="true"
+			layout="${longdate} | ${level} | ${logger} | ${message}" />
 
-    <!-- SQL日志 -->
-    <logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="console"
-      final="true" />
+		<!--黑洞-->
+		<target name="blackhole" xsi:type="Null" />
+	</targets>
 
-    <!-- 控制台日志 -->
-    <logger name="*" minLevel="Error" writeTo="consoleError" />
-    <logger name="*" minLevel="Debug" writeTo="console" />
+	<rules>
+		<!-- 除非调试需要，把 .NET Core 程序集的 Debug 输出都屏蔽 Trace -> Debug-> Info ->Warn-> Error-> Critical-->
+		<!-- 屏蔽日志 -->
+		<logger name="Microsoft.*" writeTo="blackhole" maxlevel="Warn" final="true" />
+		<logger name="Quartz.*" writeTo="blackhole" maxlevel="Warn" final="true" />
+		<logger name="System.*" writeTo="blackhole" maxlevel="Warn" final="true" />
 
-    <!-- 文件日志 -->
-    <logger name="*" minLevel="Error" writeTo="fileErrorlog" />
-    <logger name="*" minLevel="Info" writeTo="filelog" />
-    <logger name="*" minLevel="Info" writeTo="allfile" />
-  </rules>
+		<!-- 文件日志 -->
+		<logger name="*" minLevel="Error" writeTo="fileErrorLog" />
+		<logger name="*" minLevel="Info" writeTo="fileLog" />
+		<logger name="*" minLevel="Debug" writeTo="fileAllLog" />
+		
+		<!-- SQL日志 -->
+		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="console"
+		  final="true" />
+
+		<!-- 控制台日志 -->
+		<logger name="*" minLevel="Debug" writeTo="console" />
+	</rules>
 </nlog>
