--- a/XinjingdailyBot.WebAPI/nlog.config
+++ b/XinjingdailyBot.WebAPI/nlog.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  autoReload="true"
-  internalLogLevel="Warn"
-  internalLogFile="${basedir}/logs/nlog-internal.txt">
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	autoReload="true"
+	internalLogLevel="Warn"
+	internalLogFile="${basedir}/logs/nlog-internal.txt">
 
 	<!-- Load the ASP.NET Core plugin,enable asp.net core layout renderers-->
 	<extensions>
@@ -16,16 +16,34 @@
 		<!-- 控制台日志 -->
 		<!-- 普通日志 -->
 		<target name="console" xsi:type="ColoredConsole"
-		  errorStream="True"
-		  enableAnsiOutput="True"
-		  layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}">
+			errorStream="True"
+			enableAnsiOutput="True"
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}">
 			<highlight-row condition="level == LogLevel.Trace" foregroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Debug" foregroundColor="DarkGray" />
 			<highlight-row condition="level == LogLevel.Info" foregroundColor="Gray" />
 			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow" />
 			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red" />
 			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red"
-			  backgroundColor="White" />
+				backgroundColor="White" />
+		</target>
+		<!-- SQL日志 -->
+		<target name="consoleSql" xsi:type="ColoredConsole"
+			errorStream="True"
+			enableAnsiOutput="True"
+			layout="${level:format=FirstCharacter} ${date} [${logger:shortName=true}] ${message} ${exception:format=toString,Data}">
+			<highlight-row condition="level == LogLevel.Trace" foregroundColor="Green"
+				backgroundColor="Black" />
+			<highlight-row condition="level == LogLevel.Debug" foregroundColor="Green"
+				backgroundColor="Black" />
+			<highlight-row condition="level == LogLevel.Info" foregroundColor="White"
+				backgroundColor="Black" />
+			<highlight-row condition="level == LogLevel.Warn" foregroundColor="Yellow"
+				backgroundColor="Black" />
+			<highlight-row condition="level == LogLevel.Error" foregroundColor="Red"
+				backgroundColor="Black" />
+			<highlight-row condition="level == LogLevel.Fatal" foregroundColor="Red"
+				backgroundColor="Black" />
 		</target>
 
 		<!-- 文件日志 -->
@@ -77,10 +95,10 @@
 		<logger name="*" minLevel="Error" writeTo="fileErrorLog" />
 		<logger name="*" minLevel="Info" writeTo="fileLog" />
 		<logger name="*" minLevel="Debug" writeTo="fileAllLog" />
-		
+
 		<!-- SQL日志 -->
-		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="console"
-		  final="true" />
+		<logger name="XinjingdailyBot.WebAPI.Extensions.DatabaseExtension" writeTo="consoleSql"
+			final="true" />
 
 		<!-- 控制台日志 -->
 		<logger name="*" minLevel="Debug" writeTo="console" />
