--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -6,12 +6,13 @@
     <PackageVersion Include="Microsoft.Extensions.Http" Version="7.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="7.0.0" />
     <PackageVersion Include="MySql.Data" Version="8.0.33" />
-    <PackageVersion Include="NLog" Version="5.1.5" />
-    <PackageVersion Include="NLog.Extensions.Logging" Version="5.2.5" />
+    <PackageVersion Include="NLog" Version="5.2.0" />
+    <PackageVersion Include="NLog.Extensions.Logging" Version="5.3.0" />
+    <PackageVersion Include="NLog.Web.AspNetCore" Version="5.3.0" />
     <PackageVersion Include="Quartz" Version="3.6.2" />
     <PackageVersion Include="Quartz.AspNetCore" Version="3.6.2" />
     <PackageVersion Include="SqlSugar.IOC" Version="2.0.0" />
-    <PackageVersion Include="SqlSugarCore" Version="5.1.4.80" />
+    <PackageVersion Include="SqlSugarCore" Version="5.1.4.82" />
     <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageVersion Include="Telegram.Bot" Version="19.0.0" />
   </ItemGroup>
