--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -63,5 +63,18 @@
   // IpInfo设置
   "IpInfo": {
     "Token": ""
+  },
+  // 计划任务
+  "Schedule": {
+    "Cron": {
+      // 处理过期稿件
+      "ExpiredPostTask": "0 0 0 * * ?",
+      // 定时发布广告
+      "PostAdvertiseTask": "0 0 9 * * ?",
+      // 拒绝频道定时置顶
+      "RejectChannelTask": "0 0 0 * * ?",
+      // 已排期稿件定时发布
+      "PlanedPostsTask": "0 0 0 * * ?"
+    }
   }
 }
