--- a/XinjingdailyBot.WebAPI/appsettings.json
+++ b/XinjingdailyBot.WebAPI/appsettings.json
@@ -16,6 +16,9 @@
 
   // 调试模式
   "Debug": false,
+  // Swagger
+  "Swagger": true,
+  "Statistic": true,
   // 机器人设置
   "Bot": {
     "BotToken": "",
@@ -24,6 +27,7 @@
     "AutoLeaveOtherGroup": false,
     "SuperAdmins": []
   },
+  // 频道设置
   "Channel": {
     "ReviewGroup": "",
     "CommentGroup": "",
